# bazel-testcontainers-repro

./: BUILD.bazel  README.md  WORKSPACE.bazel  docker-compose.fails.yaml  docker-compose.json  docker-compose.works.yaml  jasmine.json  package.json  tsconfig.json
gateway/: BUILD.bazel  fails.test.ts  gateway.test.ts  index.ts  message.ts  works.test.ts
