load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lib",
    srcs = [
        "index.ts",
        "message.ts",
    ],
    deps = [
        "@npm//@types/express",
        "@npm//@types/node",
        "@npm//express",
    ],
)

ts_library(
    name = "test_fails_lib",
    srcs = ["fails.test.ts"],
    data = ["//:docker-compose.fails.yaml"],
    deps = [
        ":lib",
        "@npm//@types/axios",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//axios",
        "@npm//jasmine",
        "@npm//testcontainers",
    ],
)

ts_library(
    name = "test_works_lib",
    srcs = ["works.test.ts"],
    data = ["//:docker-compose.works.yaml"],
    deps = [
        ":lib",
        "@npm//@types/axios",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//axios",
        "@npm//jasmine",
        "@npm//testcontainers",
    ],
)

jasmine_node_test(
    name = "test_fails",
    templated_args = ["--bazel_patch_module_resolver"],
    deps = [":test_fails_lib"],
)

jasmine_node_test(
    name = "test_works",
    templated_args = ["--bazel_patch_module_resolver"],
    deps = [":test_works_lib"],
)
